--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
       </div>
       <div class="profile__profile-1">
         <div class="profile__profile-1__left rellax" data-rellax-speed="2">
-            <div class="profile-icon jsFadeIn"></div>
+            <div class="profile-icon jsFadeInUp"></div>
         </div>
         <div class="profile__profile-1__right rellax" data-rellax-speed="9">
-          <div class="jsFadeIn">
+          <div class="jsFadeInUp">
             <div class="profile-name">田代敬太</div>
             <div class="profile-en-name">Keita Tashiro</div>
             <div class="profile-my-background">青山学院大学 経済学部経済学科 20年3月卒業　｜　TOEIC795</div>
@@ -89,7 +89,7 @@
               <br>好きなものは歌・映画・旅行・寿司・うどんです。
             </div>
           </div>
-          <span class="rellax" data-rellax-speed="8"></span>
+          <span class="jsFadeIn rellax" data-rellax-speed="8"></span>
         </div>
       </div>
     </section>
