--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:site_name" content="K.Tashiro">
   <meta property="og:url" content="https://K.Tashiro.com">
 
-  <link rel="icon" href="/images/icon.png">
+  <link rel="icon" href="/images/icon.jpg">
   <link rel="stylesheet" type="text/css" href="/styles/venders/swiper.min.css">
   <link rel="stylesheet" type="text/css" href="/styles/reset.css">
   <link rel="stylesheet" type="text/css" href="/styles/loader.css">
@@ -63,21 +63,24 @@
       <div class="main-visual__title-logo-inner-right">
         <span class="main-visual__title-logo-inner-right__title-logo-kt">K.T</span>
       </div>
-      <div class="main-visual__arrow-inner rellax" data-rellax-speed="-3">
+      <div class="main-visual__arrow-inner rellax" data-rellax-speed="-3" data-rellax-xs-speed="-7" data-rellax-mobile-speed="-6" data-rellax-tablet-speed="-5" data-rellax-desktop-speed="-4">
         <a href="#profile">
           <img class="main-visual__arrow-inner__arrow" src="/images/down-arrow.png" alt="画像">
         </a>
       </div>
     </section>
-    <section class="profile" id="profile">
-      <div class="h-fade-in" id="profile">
+    <section class="sections" id="profile">
+      <div class="h-fade-in">
         <h2 class="h-fade-in__body">profile</h2>
       </div>
-      <div class="profile__profile-1">
-        <div class="profile__profile-1__left rellax" data-rellax-speed="2">
-            <div class="profile-icon jsFadeInUp"></div>
+      <div class="profile">
+        <div class="profile__profile-bg-inner rellax" data-rellax-speed="-3" data-rellax-xs-speed="-1" data-rellax-mobile-speed="-2" data-rellax-tablet-speed="-2" data-rellax-desktop-speed="-3">
+          <span class="profile__profile-bg-inner__profile-bg jsFadeIn"></span>
         </div>
-        <div class="profile__profile-1__right rellax" data-rellax-speed="9">
+        <div class="profile__left rellax jsFadeIn" data-rellax-speed="8" data-rellax-xs-speed="14" data-rellax-mobile-speed="6" data-rellax-tablet-speed="7" data-rellax-desktop-speed="7">
+          <div class="profile-icon"></div>
+        </div>
+        <div class="profile__right rellax" data-rellax-speed="4">
           <div class="jsFadeInUp">
             <div class="profile-name">田代敬太</div>
             <div class="profile-en-name">Keita Tashiro</div>
@@ -89,7 +92,7 @@
               <br>好きなものは歌・映画・旅行・寿司・うどんです。
             </div>
           </div>
-          <span class="jsFadeIn rellax" data-rellax-speed="8"></span>
+          <!-- <span class="jsFadeIn rellax" data-rellax-speed="-5"></span> -->
         </div>
       </div>
     </section>
