--- a/index.html
+++ b/index.html
@@ -252,12 +252,11 @@
                   </div>
                 </div>
               </div>
-    </section>
-    <section class="contact"></section>
-  </div>
+     </section>
+    <!-- <section class="contact"></section> -->
+    </div>
     <!-- Footer -->
     <footer><p>© 2020 K.Tashiro.</p></footer>
-  </section>
   </div>
     <script type="text/javascript" src="/js/libs/hero-slider.js"></script>
     <script type="text/javascript" src="/js/libs/pace.min.js"></script>
