--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </li> 
         </ul>
         <div class="nav__menu-icon">
-        <span></span>
-        <span></span>
-        <span></span>
+            <span class="nav__menu-icon__line"></span>
+            <span class="nav__menu-icon__line"></span>
+            <span class="nav__menu-icon__line"></span>
         </div>
     </nav>
     <!-- Main Sections -->
@@ -57,10 +57,6 @@
             <span class="bgSectionTitles jsFadeInDelay">welcome</span>
             <div class="bgSectionTitlesOverlay"></div>
         </div>
-    <!-- <div class="global-bg-container rellax" data-rellax-speed="-4" data-rellax-percentage=".5">
-      <span class="global-bg-container__bg-left-1"></span>
-      <span class="global-bg-container__bg-right-1"></span>
-    </div> -->
         <section class="main-visual-section" id="top">
         <div class="main-visual">
             <div class="main-visual__overlay-top"></div>
@@ -72,29 +68,76 @@
             <div class="main-visual__title-logo-inner-right">
             <span class="main-visual__title-logo-inner-right__title-logo-kt">K.T</span>
             </div>
-            <div class="main-visual__arrow-inner">
+            <!-- <div class="main-visual__arrow-inner rellax" data-rellax-speed="-2">
             <a href="#profile">
                 <img class="main-visual__arrow-inner__arrow" src="/images/down-arrow.png" alt="画像">
             </a>
-            </div>
+            </div> -->
         </div>
+        </section>
+        <section class="gate-animation">
+            <div class="gateAnimation">
+                <div class="gateWrapper">
+                    <div class="gateLeft">
+                        <span class="gateLeft__body"></span>
+                    </div>
+                    <div class="gateRight">
+                        <span class="gateRight__body"></span>
+                    </div>
+                </div>
+                <div class="gateWrapper">
+                    <div class="gateLeft">
+                        <span class="gateLeft__body"></span>
+                    </div>
+                    <div class="gateRight">
+                        <span class="gateRight__body"></span>
+                    </div>
+                </div>
+                <div class="gateWrapper">
+                    <div class="gateLeft">
+                        <span class="gateLeft__body"></span>
+                    </div>
+                    <div class="gateRight">
+                        <span class="gateRight__body"></span>
+                    </div>
+                </div>
+                <div class="gateWrapper">
+                    <div class="gateLeft">
+                        <span class="gateLeft__body"></span>
+                    </div>
+                    <div class="gateRight">
+                        <span class="gateRight__body"></span>
+                    </div>
+                </div>
+                <div class="gateWrapper">
+                    <div class="gateLeft">
+                        <span class="gateLeft__body"></span>
+                    </div>
+                    <div class="gateRight">
+                        <span class="gateRight__body"></span>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="profile-section" id="profile">
         <div class="h-fade-in">
             <h2 class="h-fade-in__body">Profile</h2>
         </div>
         <div class="profile">
-            <div class="profile__left jsFadeInUp">
-              <div class="profile-icon rellax" data-rellax-speed="3" data-rellax-percentage=".1"></div>
+            <div class="profile__left jsFadeInOutUp">
+                <div class="profile-icon rellax" data-rellax-speed="3" data-rellax-percentage=".1"></div>
             </div>
             <div class="profile__right rellax" data-rellax-speed="3" data-rellax-percentage=".4">
-                <div class="profile__right__profile-wrapper jsFadeInUp">
+                <div class="profile__right__profile-wrapper jsFadeInOutUp">
                     <div class="profile-name">田代敬太</div>
                     <div class="profile-en-name">Keita Tashiro</div>
                     <div class="profile-my-background">青山学院大学 経済学部経済学科 二十年三月卒業　TOEIC795</div>
                     <div class="profile-intro">
                     ITとものづくりが好きな学生です（でした）。
-                    <br>Webエンジニアを目指しています。独学を始めて約3ヶ月が経ちました。<br>エンジニアになりたい気持ちは誰にも負けません。
+                    <br>Webエンジニアを目指しています。独学を始めて約3ヶ月が経ちました。
+                    <br>エンジニアになりたいという気持ち一つで、当サイトを制作しました。制作期間は1ヶ月です。
+                    <br>ありきたりな物にならないようリソースをUIに全振りしました。
+                    <br>こだわりポイントは、リッチなデザイン/アニメーション最適化/コードの可能性や保守性/レスポンシブ化です。。
                     <br>好きなものは歌・映画・旅行・寿司・うどんです。
                     </div>
                 </div>
@@ -107,7 +150,7 @@
                 <div class="h-fade-in__body">About</div>
             </div>
             <div class="about">
-                <p class="about__about-header jsFadeInUp">Why enginner?</p>
+                <p class="about__about-header jsFadeInOutUp">Why enginner?</p>
                 <div class="about__about-1 jsFadeInOutDelay">
                     <div class="about__about-1__left">
                         <p>ああああああ</p>
