--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="topCoverAnimate"></div>
     <!-- Body -->
     <div id="global-container">
-       <!-- Nav Menu -->
+        <!-- Nav Menu -->
         <nav class="nav">
             <div class="nav__closing-target"></div>
             <ul>
@@ -56,50 +56,67 @@
                 <div class="bgSectionTitlesOverlay"></div>
             </div>
             <section class="main-visual-section" id="top">
-            <div class="main-visual">
-                <div class="main-visual__overlay-top"></div>
-                <div class="main-visual__overlay-left"></div>
-                <div class="main-visual__overlay-right"></div>
-                <div class="main-visual__title-logo-inner-left">
-                <span class="main-visual__title-logo-inner-left__title-logo-char">ash<span style='color: red'>i</span>ro</span>
+                <div class="main-visual">
+                    <div class="main-visual__overlay-top"></div>
+                    <div class="main-visual__overlay-left"></div>
+                    <div class="main-visual__overlay-right"></div>
+                    <div class="main-visual__title-logo-inner-left">
+                        <span class="main-visual__title-logo-inner-left__title-logo-char">ash<span style='color: red'>i</span>ro</span>
+                    </div>
+                    <div class="main-visual__title-logo-inner-right">
+                        <span class="main-visual__title-logo-inner-right__title-logo-kt">K.T</span>
+                    </div>
+                    <div class="main-visual__arrow-inner rellax" data-rellax-speed="-4">
+                        <a href="#profile">
+                            <img class="main-visual__arrow-inner__arrow" src="/images/down-arrow.png" alt="画像">
+                        </a>
+                    </div>
                 </div>
-                <div class="main-visual__title-logo-inner-right">
-                <span class="main-visual__title-logo-inner-right__title-logo-kt">K.T</span>
-                </div>
-                <div class="main-visual__arrow-inner rellax" data-rellax-speed="-4">
-                <a href="#profile">
-                    <img class="main-visual__arrow-inner__arrow" src="/images/down-arrow.png" alt="画像">
-                </a>
-                </div>
-            </div>
             </section>
             <section class="gate-animation-section">
                 <div class="my-words-wrapper">
                     <div class="my-words-inner">
-                        <p class="my-words-top jsFadeInUp rellax" data-rellax-speed="2" data-rellax-percentage=".5">ー　 <span style='color: red'>も</span>のづくり　 ー
-                            <br><br><br>「ものづくり・ものつくりとは、物を作ること。特に、熟練した技術者が極めて細かく巧みな物を作ること。」
-                        </p>
-                        <p class="my-words-mid jsFadeInUp rellax" data-rellax-speed="2" data-rellax-percentage=".5">20年間、忘れかけていた夢。
-                        </p>
-                        <p class="my-words-mid jsFadeInUp rellax" data-rellax-speed="2" data-rellax-percentage=".5">
-                            「何か<span style='color: red'>の</span>職人になりたい」
-                            <br>
-                            私がまだ小さい頃、よく口にしていた言葉です。
-                        </p>
-                        <p class="my-words-mid jsFadeInUp rellax" data-rellax-speed="2" data-rellax-percentage=".5">
-                            大きくなるに<span style='color: red'>つ</span>れ、徐々に、と<span style='color: red; margin: 0 -9px 0 -4px;'>゛</span>こかへと埋もれていった夢。
-                        </p>
-                        <p class="my-words-mid jsFadeInUp rellax" data-rellax-speed="2" data-rellax-percentage=".5">
-                            就職を目前にして「やりたい仕事がない」と路頭に迷う私。           
-                        </p>
-                        <p class="my-words-mid jsFadeInUp rellax" data-rellax-speed="2" data-rellax-percentage=".5">
-                            <br>そんな私が「エンジニア」という道に気がついた時、
-                            埋もれかけていた夢が掘り起こされ、
-                            大きな希望と後悔が全身を駆け巡りました。
-                        </p>
-                        <p class="my-words-bottom jsFadeInUp rellax" data-rellax-speed="2" data-rellax-percentage=".5">今からでも遅<span style='color: red'>く</span>ない。
-                            私はこれからの人生を「ものづく<span style='color: red'>り</span>」に生きることにしました。
-                        </p>
+                        <div class="my-words-top rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
+                            <p class="jsFadeInUp">
+                                ー　 <span style='color: red'>も</span>のづくり　 ー
+                                <br><br><br>「ものづくり・ものつくりとは、物を作ること。特に、熟練した技術者が極めて細かく巧みな物を作ること。」
+                            </p>
+                        </div>
+                        <div class="my-words-mid rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
+                            <p class="jsFadeInUp">
+                                20年間、忘れかけていた夢。
+                            </p>
+                        </div>
+                        <div class="my-words-mid rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
+                            <p class="jsFadeInUp">
+                                「何か<span style='color: red'>の</span>職人になりたい」
+                                <br>
+                                私がまだ小さい頃、よく口にしていた言葉です。
+                            </p>
+                        </div>
+                        <div class="my-words-mid rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
+                            <p class="jsFadeInUp">
+                                大きくなるに<span style='color: red'>つ</span>れ、徐々に、と<span style='color: red; margin: 0 -9px 0 -4px;'>゛</span>こかへと埋もれていった夢。
+                            </p>
+                        </div>
+                        <div class="my-words-mid rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
+                            <p class="jsFadeInUp">
+                                就職を目前にして「やりたい仕事がない」と路頭に迷う私。           
+                            </p>
+                        </div>
+                        <div class="my-words-mid rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
+                            <p class="jsFadeInUp">
+                                <br>そんな私が「エンジニア」という道に気がついた時、
+                                埋もれかけていた夢が掘り起こされ、
+                                大きな希望と後悔が全身を駆け巡りました。
+                            </p>
+                        </div>
+                        <div class="my-words-bottom rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
+                            <p class="jsFadeInUp">
+                                今からでも遅<span style='color: red'>く</span>ない。
+                                私はこれからの人生を「ものづく<span style='color: red'>り</span>」に生きることにしました。
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="gateAnimation">
@@ -177,16 +194,19 @@
                 </div>
                 <p class="about-header">私がエンジニアを目指す理由</p>
                 <div class="about">
+                    <span class="about-bg"></span>
+                    <span class="about-bg"></span>
+                    <span class="about-bg"></span>
                     <div class="about__body-wrapper jsFadeInOutDelay">
-                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="2" data-rellax-percentage=".8" id="about1">
-                            <span class="about-title">•ものづくり
+                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about1">
+                            <span class="about-title">Ⅰ　ものづくり
                             </span>
                             <p class="about-body">
                                 こんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太です
                                 こんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太です
                             </p>
                         </div>
-                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-2" data-rellax-percentage="0">
+                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-1" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
                             </div>
@@ -205,14 +225,14 @@
                         </div>
                     </div>
                     <div class="about__body-wrapper jsFadeInOutDelay">
-                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="2" data-rellax-percentage=".8" id="about2">
-                            <p class="about-title">二、スキルアップ</p>
+                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about2">
+                            <p class="about-title">Ⅱ スキルアップ</p>
                             <p class="about-body">ローレムイップサムローレムイップサムローレムイップサムローレム
                                 <br>イップサムローレムイップサムローレムイップサムローレム
                                 <br>イップサムローレムイップサムローレムイップサムローレムイップサム
                             </p>
                         </div>
-                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-2" data-rellax-percentage="0">
+                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-1" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
                             </div>
@@ -231,14 +251,14 @@
                         </div>
                     </div>
                     <div class="about__body-wrapper jsFadeInOutDelay">
-                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="2" data-rellax-percentage=".8" id="about3">
-                            <p class="about-title">三、チーム</p>
+                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about3">
+                            <p class="about-title">Ⅲ チーム</p>
                             <p class="about-body">ローレムイップサムローレムイップサムローレムイップサムローレム
                                 イップサムローレムイップサムローレムイップサムローレム
                                 イップサムローレムイップサムローレムイップサムローレムイップサム
                             </p>
                         </div>
-                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-2" data-rellax-percentage="0">
+                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-1" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
                             </div>
@@ -314,28 +334,47 @@
                 <div class="h-fade-in">
                     <h2 class="h-fade-in__body">works</h2>
                 </div>
-                <!-- <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="/images/bg-front01.JPG" alt="画像">
+                <div class="works">
+                    <span class="works-bg rellax" data-rellax-speed="-3" data-rellax-percentage=".5"></span>
+                    <div class="works-container">
+                        <div class="works-container__work-wrapper jsFadeInUpDelay">
+                            <div class="workMore __white">
+                                <div class="workMore__body">
+                                    <!-- <h2></h2> -->
+                                    <p>coming soon...</p>
+                                    <!-- <a href=""></a> -->
+                                </div>
                             </div>
-                        <div class="swiper-slide">
-                            <img src="/images/bg-front02.JPG" alt="画像">
+                            <div class="work"></div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="/images/bg-front03.JPG" alt="画像">
+                        <div class="works-container__work-wrapper jsFadeInUpDelay">
+                            <div class="workMore __black">
+                                <div class="workMore__body">
+                                    <!-- <h2></h2> -->
+                                    <p>coming soon...</p>
+                                    <!-- <a href=""></a> -->
+                                </div>
+                            </div>
+                            <div class="work"></div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="/images/bg-front01.JPG" alt="画像">
+                        <div class="works-container__work-wrapper jsFadeInUpDelay">
+                            <div class="workMore __white">
+                                <div class="workMore__body">
+                                    <!-- <h2>タイトル</h2> -->
+                                    <p>coming soon...</p>
+                                    <!-- <a href="">リンク</a> -->
+                                </div>
+                            </div>
+                            <div class="work"></div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="/images/bg-front02.JPG" alt="画像">
-                        </div>
-                        <div class="swiper-my-pagination"></div>
                     </div>
-                </div> -->
+                </div>
             </section>
-            <section class="contact-section" id="contact"></section>
+            <section class="contact-section" id="contact">
+                <div class="h-fade-in">
+                    <h2 class="h-fade-in__body">contact</h2>
+                </div>
+            </section>
     <!-- <section class="contact"></section> -->
     <!-- Footer -->
             <footer><p>© 2020 K.Tashiro.</p></footer>
